--- a/public/views/room-page.html
+++ b/public/views/room-page.html
@@ -2,10 +2,9 @@
     <div class="row">
         <div class="col sidebar">
             <img src="/images/Etril_Logo_minimal.png" alt="Etril Co" class="logo img-fluid">
-            <ul class="list-unstyled">
-                <li ng-click="view = 'cs'">Etril CS</li>
+            <ul class="list-unstyled" ng-init="view='cs'">
                 <li ng-click="view = 'maps'">Etril Maps</li>
-                <!-- <li ng-click="page = 'join-room'">Join Existing Room</li> -->
+                <li ng-click="view = 'cs'">Etril CS</li>
             </ul>
         </div>
         <div class="col main-content">
@@ -18,11 +17,8 @@
             <div class="row">
                 <div class="col page-col wrapper">
                     <div class="position-relative">
-                        <div ng-if="userType === 'GM'" ng-include="'/views/components/room-page/gm-room-view.html'">
-
-                        </div>
-                        <div ng-if="userType !== 'GM'" ng-include="'/views/components/room-page/user-room-view.html'">
-                        </div>
+                        <div ng-if="userType === 'GM'" ng-include="'/views/components/room-page/gm-room-view.html'"></div>
+                        <div ng-if="userType !== 'GM'" ng-include="'/views/components/room-page/user-room-view.html'"></div>
                     </div>
                 </div>
             </div>
