Room page edit stats ok

--- a/index.ejs
+++ b/index.ejs
@@ -38,7 +38,12 @@
 
 <!-- Controllers -->
 <script src="js/controllers/homeCtrl.js"></script>
+
 <script src="js/controllers/roomCtrl.js"></script>
+<script src="js/controllers/roomUserCtrl.js"></script>
+<script src="js/controllers/roomGmCtrl.js"></script>
+
+
 <script src="js/controllers/userPageCtrl.js"></script>
 <script src="js/controllers/createRoomCtrl.js"></script>
 
