--- a/public/views/components/room-page/user-room-view.html
+++ b/public/views/components/room-page/user-room-view.html
@@ -1,1 +1,208 @@
-user-room-view.html
+<div ng-if="view === 'maps'" style="position:relative">
+    <div ng-if="singleUser.intelect < 5 ||singleUser.intelect === undefined ">
+        Go Get Intelect Bruh!
+    </div>
+    <div ng-if="userToShow.intelect >= 5">
+        <div class="row">
+            <div class="col" ng-init="map='Guren Graslands'">
+                <span class="show-map-btn" ng-class="map === 'Guren Graslands' ? 'active' : ' ' " ng-click="map = 'Guren Graslands'">
+                    Guren Graslands
+                </span>
+                <span class="show-map-btn" ng-class="map==='tamir' ? 'active' :  '' " ng-click="map = 'tamir'">tamir</span>
+                <span class="show-map-btn" ng-class="map==='bayar' ? 'active' :  ''" ng-click="map = 'bayar'">bayar</span>
+                <span class="show-map-btn" ng-class="map==='spike bay' ? 'active' :  ''" ng-click="map = 'spike bay'">spike
+                    bay</span>
+                <span class="show-map-btn" ng-class="map==='scarlet hills' ? 'active' : ' '" ng-click="map = 'scarlet hills'">scarlet
+                    hills</span>
+                <span class="show-map-btn" ng-class="map==='erdene forest' ? 'active' : ' '" ng-click="map = 'erdene forest'">erdene
+                    forest</span>
+                <span class="show-map-btn" ng-class="map==='dalai village' ? 'active' : ' '" ng-click="map = 'dalai village'">dalai
+                    village</span>
+                <span class="show-map-btn" ng-class="map==='tsetseg forest' ? 'active' : ' '" ng-click="map = 'tsetseg forest'">tsetseg
+                    forest</span>
+                <span class="show-map-btn" ng-class="map==='golden valley' ? 'active' : ' '" ng-click="map = 'golden valley'">golden
+                    valley</span>
+                <span class="show-map-btn" ng-class="map==='IkhThorog' ? 'active' : ' '" ng-click="map = 'IkhThorog'">Ikh'Thorog</span>
+            </div>
+
+        </div>
+
+        <div class="row" style="width: 100%; height: calc(100vh - 211px); position: relative;overflow: scroll;    margin: 0 auto;">
+            <div class="my-canvas" style="width: 100%;height: 100%;">
+                <img ng-if="map === 'Guren Graslands'" my-draggable src="/images/maps/omap.jpg" style="transform: scale({{updatesize / 100}}); top:{{updateY}}px; left:{{updateX}}px;">
+                <img ng-if="map==='tamir'" my-draggable src="/images/maps/1.png" style="transform: scale({{updatesize / 100}}); top:{{updateY}}px; left:{{updateX}}px;">
+                <img ng-if="map==='bayar'" my-draggable src="/images/maps/2.png" style="transform: scale({{updatesize / 100}}); top:{{updateY}}px; left:{{updateX}}px;">
+                <img ng-if="map==='spike bay'" my-draggable src="/images/maps/3.png" style="transform: scale({{updatesize / 100}}); top:{{updateY}}px; left:{{updateX}}px;">
+                <img ng-if="map==='scarlet hills'" my-draggable src="/images/maps/4.png" style="transform: scale({{updatesize / 100}}); top:{{updateY}}px; left:{{updateX}}px;">
+                <img ng-if="map==='erdene forest'" my-draggable src="/images/maps/5.png" style="transform: scale({{updatesize / 100}}); top:{{updateY}}px; left:{{updateX}}px;">
+                <img ng-if="map==='dalai village'" my-draggable src="/images/maps/6.png" style="transform: scale({{updatesize / 100}}); top:{{updateY}}px; left:{{updateX}}px;">
+                <img ng-if="map==='tsetseg forest'" my-draggable src="/images/maps/7.jpg" style="transform: scale({{updatesize / 100}}); top:{{updateY}}px; left:{{updateX}}px;">
+                <img ng-if="map==='golden valley'" my-draggable src="/images/maps/8.png" style="transform: scale({{updatesize / 100}}); top:{{updateY}}px; left:{{updateX}}px;">
+                <img ng-if="map==='IkhThorog'" my-draggable src="/images/maps/9.png" style="transform: scale({{updatesize / 100}}); top:{{updateY}}px; left:{{updateX}}px;">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div ng-if="view === 'cs'">
+
+    <div class="row navtabs">
+        <!-- <div class="col" ng-repeat="user in room.users" ng-click="getUserId(user.id)" ng-class="user.id === userToShow ? 'active' : ''">
+            {{singleUser.username}}
+        </div> -->
+    </div>
+    <!-- {{userToShow}} -->
+    <form class=" row nav-content" ng-submit="editUserRoomData(userToShow)">
+        <div class="col-12" ng-repeat="user in room.users" ng-if="userToShow.id === user.id">
+            <div class="row pb-2">
+                <div class="col">Name: {{userToShow.username}}</div>
+                <div class="col text-right">Level: {{userToShow.level}} <span ng-if="user.level === undefined">undefined</span></div>
+            </div>
+            <div class="row pb-3" style="border-bottom: 1px solid grey">
+                <div class="col">Race: {{userToShow.playerRace}}</div>
+                <div class="col text-center">Class: {{userToShow.playerClass}}</div>
+                <div class="col text-right" style="white-space:nowrap">Subclass: {{userToShow.playerSubclass}}</div>
+            </div>
+            <div class="row py-3" style="border-bottom: 1px solid grey">
+                <div class="col-5 battle-stats-col">
+                    <h5>Battle Statistics</h5>
+                    <div class="row">
+                        <div class="col">Vitality</div>
+                        <div class="col">
+                            <input class="custom-input" type="text" ng-model="userToShow.stats.vitality" placeholder="Vitality">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">Power</div>
+                        <div class="col">
+                            <input class="custom-input" type="text" ng-model="userToShow.stats.power" placeholder="Power">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">Teamwork</div>
+                        <div class="col">
+                            <input class="custom-input" type="text" ng-model="userToShow.stats.teamwork" placeholder="Teamwork">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">Armor</div>
+                        <div class="col">
+                            <input class="custom-input" type="text" ng-model="userToShow.stats.armor" placeholder="Armor">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">Mobility</div>
+                        <div class="col">
+                            <input class="custom-input" type="text" ng-model="userToShow.stats.mobility" placeholder="Mobility">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">Range</div>
+                        <div class="col">
+                            <input class="custom-input" type="text" ng-model="userToShow.stats.range" placeholder="Range">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2" style="border-left:1px solid grey;border-right:1px solid grey;">
+                    <h5 class="text-center">Total</h5>
+                </div>
+                <div class="col-5 off-combact-stats-col d-flex flex-column">
+                    <h5>Adventure Statistics</h5>
+                    <div class="row">
+                        <div class="col">Exploration</div>
+                        <div class="col">
+                            <input class="custom-input" type="text" ng-model="userToShow.stats.exploration" placeholder="Exploration">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">Diplomacy</div>
+                        <div class="col">
+                            <input class="custom-input" type="text" ng-model="userToShow.stats.diplomace" placeholder="Diplomacy">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">Intelect</div>
+                        <div class="col">
+                            <input class="custom-input" type="text" ng-model="userToShow.stats.intelect" placeholder="Intelect">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">Stamina</div>
+                        <div class="col">
+                            <input class="custom-input" type="text" ng-model="userToShow.stats.stamina" placeholder="Stamina">
+                        </div>
+                    </div>
+                    <div class="row mt-auto">
+                        <div class="col">Grey Tokens</div>
+                        <div class="col">
+                            <input class="custom-input" type="text" ng-model="userToShow.stats.greyTokens" placeholder="Grey Tokens">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row pt-4 pb-3 gear-col">
+                <h5 class="col-12 no-gutters">Gear</h5>
+                <div class="col-md-6 no-gutters">
+                    <div>
+                        <input class="custom-input" type="text" ng-model="userToShow.gear.weaponSlot1" placeholder=" Weapon Slot 1">
+
+                    </div>
+                    <div>
+                        <input class="custom-input" type="text" ng-model="userToShow.gear.weaponSlot2" placeholder=" Weapon Slot 2">
+                    </div>
+                </div>
+                <div class="col-md-6 no-gutters">
+                    <div>
+                        <input class="custom-input" type="text" ng-model="userToShow.gear.armorSlot1" placeholder=" Armor Slot 1">
+                    </div>
+                    <div>
+                        <input class="custom-input" type="text" ng-model="userToShow.gear.armorSlot2" placeholder=" Armor Slot 2">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row pt-4 pb-3 bag-col">
+                <h5 class="col-12 no-gutters">Bag</h5>
+                <div class="col-md-4 no-gutters">
+                    <div>
+                        <input class="custom-input" type="text" ng-model="userToShow.bag.itemSlot1" placeholder=" Item Slot 1">
+                    </div>
+                    <div>
+                        <input class="custom-input" type="text" ng-model="userToShow.bag.itemSlot2" placeholder=" Item Slot 2">
+                    </div>
+                </div>
+                <div class="col-md-4 no-gutters">
+                    <div>
+                        <input class="custom-input" type="text" ng-model="userToShow.bag.itemSlot3" placeholder=" Item Slot 3">
+                    </div>
+                    <div>
+                        <input class="custom-input" type="text" ng-model="userToShow.bag.itemSlot4" placeholder=" Item Slot 4">
+                    </div>
+                </div>
+                <div class="col-md-4 no-gutters">
+                    <div>
+                        <input class="custom-input" type="text" ng-model="userToShow.bag.itemSlot5" placeholder=" Item Slot 5">
+                    </div>
+                    <div>
+                        <input class="custom-input" type="text" ng-model="userToShow.bag.itemSlot6" placeholder=" Item Slot 6">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row pt-4 pb-3 bag-col">
+                <h5 class="col-12 no-gutters">General Info</h5>
+                <div class="form-group w-100">
+                    <textarea class="form-control" ng-model="userToShow.generalInfo" rows="3"></textarea>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+
+                </div>
+            </div>
+        </div>
+        <button class="btn btn-primary float-right">Save</button>
+    </form>
+
+</div>
