--- a/index.ejs
+++ b/index.ejs
@@ -50,6 +50,7 @@
 <script src="js/controllers/raceSelectionCtrl.js"></script>
 <script src="js/controllers/classSelectionCtrl.js"></script>
 <script src="js/controllers/subclassSelectionCtrl.js"></script>
+<script src="js/controllers/usernameSelectionCtrl.js"></script>
 
 <script src="js/controllers/racesService.js"></script>
 
