--- a/public/views/class-selection.html
+++ b/public/views/class-selection.html
@@ -5,7 +5,7 @@
         justify-content: space-between; -->
     <div class="row">
         <div class="col text-center">
-            <h3 style="color: #bb843e;font-family: 'Kaushan Script', cursive;font-size: 49px">2. Choose Your Class</h3>
+            <h3 style="color: #98e7b8;font-size: 49px">2. Choose Your Class</h3>
         </div>
     </div>
 
